Fixed image alignment for blog post links.

--- a/Augustine_1_0_0/css/styles.css
+++ b/Augustine_1_0_0/css/styles.css
@@ -3671,8 +3671,9 @@ img.u-pull-left {
 }
 
 .blog-post-item__thumb .blog-post-item__thumb-link img {
-    margin     : 0;
-    transition : all, .5s;
+    vertical-align : bottom;
+    margin-bottom  : 0;
+    transition     : all, 0.5s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
 .blog-post-item__thumb:hover .blog-post-item__thumb-link img {
